Almost completed step 8
Update book button isn't changing the selected book.  Reaching out on Slack for help.

--- a/views/index.pug
+++ b/views/index.pug
@@ -19,3 +19,6 @@ block content
           td= book.author
           td= book.genre 
           td= book.year
+  div.pagination
+  
+    include ./includes/pagination
