Almost finished project
I still have a few bugs to iron out.  Search routing when term === "" for example.  Need customized styling, code comments, and README.  I may want to add another view as well.

--- a/views/includes/pagination.pug
+++ b/views/includes/pagination.pug
@@ -1,5 +1,10 @@
 p 
   each page in pages
     span 
-      span
-        a(class="button", href=`books?page=${page}`)= page++
+      if term 
+        span 
+          a(class="button", href=`/books/search?term=${term}&page=${page}`)= page++
+      else
+        span
+          a(class="button", href=`/books/?page=${page}`)= page++
+          //- a(class="button", href=`books?page=${page}`)= page++
