--- a/views/index.pug
+++ b/views/index.pug
@@ -2,8 +2,9 @@ extends layout
 
 block content
   h1= title
-  p 
-    a(class="button", href="./books/new") Create New Book 
+  
+  include ./includes/search-form
+
   table
     thead 
       tr 
