--- a/views/includes/update-book-form.pug
+++ b/views/includes/update-book-form.pug
@@ -3,10 +3,10 @@ p
   input(name="title" type="text" id="title" value=book.title)
 p
   label(for="author") Author
-  input(name="author" type="text" id="author" value=book.author)
+  input(name="author", type="text", id="author", value=book.author)
 p
   label(for="genre") Genre
-  input(name="genre" type="text" id="genre" value=book.genre)
+  input(name="genre", type="text", id="genre", value=book.genre)
 p
   label(for="year") Year
-  input(name="year" type="text" id="year" value=book.year)
+  input(name="year", type="text", id="year", value=book.year)
