--- a/views/includes/by_line.pug
+++ b/views/includes/by_line.pug
@@ -2,5 +2,7 @@ h2
   = `Author: ${book.author}`
   |  | 
   = `Genre: ${book.genre}`
-  |  |
+  |  | 
   = `Year: ${book.year}`
+  p
+    = `Wiki Link: ${book.wikiLink}`
