--- a/views/includes/form-error.pug
+++ b/views/includes/form-error.pug
@@ -1,6 +1,6 @@
 if(errors)
-  h2 Oh no! An error occurred.
-  ul
+  h2.error Oh no! An error occurred.
+  ul.error
     each err in errors
       li
         = err.message
