--- a/views/includes/update-book-form.pug
+++ b/views/includes/update-book-form.pug
@@ -10,3 +10,6 @@ p
 p
   label(for="year") Year
   input(name="year", type="text", id="year", value=book.year)
+p
+  label(for="wikiLink") Wiki Link
+  input(name="wikiLink", type="text", id="wikiLink", value=book.wikiLink)
