--- a/views/new-book.pug
+++ b/views/new-book.pug
@@ -11,6 +11,6 @@ block content
     include ./includes/update-book-form
 
     p
-      input(type="submit", value="Create New Book")
+      input(class="buttonCreateNewBook", type="submit", value="Create New Book")
     p
       a(class="button", href="/books") Cancel
