--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -30,6 +30,7 @@ a.button, input[type=submit] {
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
   border-radius: 2px;
   cursor: pointer;
+  display: inline-block;
 }
 
 form a.button, input[type=submit] {
